Bug 351519 - Learning, Show Status Bar displays nothing
Summary: Learning, Show Status Bar displays nothing
Status: RESOLVED FIXED
Alias: None
Product: kbruch
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Debian stable Linux
: NOR minor
Target Milestone: ---
Assignee: Sebastian Stein
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-08-20 13:09 UTC by Prathibha
Modified: 2015-09-27 00:35 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 15.08.2
Sentry Crash Report:


Attachments
patch to remove 'Show StatusBar' from Learning -> Settings menu. (1.03 KB, patch)
2015-08-20 13:12 UTC, Prathibha
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Prathibha 2015-08-20 13:09:29 UTC
In Learning, after selecting the settings menu click "Show StatusBar". Result: No status bar displayed.

Reproducible: Always

Steps to Reproduce:
1. Kbruch -> Learning -> Settings -> Show StatusBar.
2. 
3.

Actual Results:  
Status Bar is not getting displayed.

Expected Results:  
Status Bar should be displayed.
Comment 1 Prathibha 2015-08-20 13:12:42 UTC
Created attachment 94131 [details]
patch to remove  'Show StatusBar' from Learning -> Settings menu.

This patch removes the 'Show StatusBar' menu item. This is tested in kbruch version 4:4.14.1-1
Comment 2 Luigi Toscano 2015-09-27 00:10:00 UTC
Thanks for your patch. It solves the bug. I'm going to apply it, after refreshing it against the last version and removing few extra whitespaces. 
For future contributions please check:
https://techbase.kde.org/Contribute/Send_Patches
Comment 3 Luigi Toscano 2015-09-27 00:35:42 UTC
Git commit 87d0a1727fdfdf48edecf010759366b49d3e578c by Luigi Toscano, on behalf of Prathibha B.
Committed on 27/09/2015 at 00:09.
Pushed by ltoscano into branch 'Applications/15.08'.

Removed 'Show StatusBar' menu item from Learning.
FIXED-IN: 15.08.2
Reviewed-by: Luigi Toscano <luigi.toscano@tiscali.it>

M  +2    -1    src/FractionRingWidget.cpp

http://commits.kde.org/kbruch/87d0a1727fdfdf48edecf010759366b49d3e578c