Removed 'Show StatusBar' menu item from Learning.

BUG: 351519
FIXED-IN: 15.08.2
Reviewed-by: Luigi Toscano <luigi.toscano@tiscali.it>